--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primary_theme">#121212</color>
+    <color name="secondary_theme">#FFFFFFFF</color>
+    <color name="subtitle">#A8A8A8</color>
 </resources>
