--- a/app/src/main/res/layout/activity_product_view.xml
+++ b/app/src/main/res/layout/activity_product_view.xml
@@ -146,21 +146,11 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/pricePerStoreList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pricesLabel"
-        app:layout_constraintVertical_bias="0.024" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="84dp"
-        android:layout_height="111dp"
-        android:layout_marginStart="12dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guidelineVertical" />
+        app:layout_constraintTop_toBottomOf="@+id/pricesLabel" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
