--- a/app/src/main/res/menu/shopping_list_add_menu.xml
+++ b/app/src/main/res/menu/shopping_list_add_menu.xml
@@ -11,4 +11,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:title="Create a list" />
+    <item
+        android:id="@+id/deleteList"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:title="Delete a List" />
 </menu>
