--- a/app/src/main/res/layout/dialog_create_list.xml
+++ b/app/src/main/res/layout/dialog_create_list.xml
@@ -23,6 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/store_select_title"
+        android:layout_marginBottom="25dp"
         android:hint="Store">
 
         <AutoCompleteTextView
@@ -33,29 +34,12 @@
         </AutoCompleteTextView>
     </com.google.android.material.textfield.TextInputLayout>
 
-    <TextView
-        android:id="@+id/list_name_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textInputLayout"
-        android:fontFamily="@font/inter_semibold"
-        android:text="Enter Shopping List Name:"
-        android:textSize="17sp"
-        android:layout_marginTop="20dp"/>
-
-    <EditText
-        android:id="@+id/list_name_input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/list_name_title"
-        android:layout_marginBottom="20dp">
-    </EditText>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/cancel_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/list_name_input"
+        android:layout_below="@+id/textInputLayout"
         android:layout_alignParentStart="true"
         android:fontFamily="@font/inter_semibold"
         android:background="@color/secondary_theme"
@@ -67,7 +51,7 @@
         android:id="@+id/submit_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/list_name_input"
+        android:layout_below="@+id/textInputLayout"
         android:layout_alignParentEnd="true"
         android:fontFamily="@font/inter_semibold"
         android:background="@color/secondary_theme"
