--- a/app/src/main/res/layout/dialog_multiple_choice.xml
+++ b/app/src/main/res/layout/dialog_multiple_choice.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/addProductPopUp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingHorizontal="20dp"
-    android:paddingVertical="15dp"
+    android:layout_marginHorizontal="50dp"
     android:background="@color/primary_theme"
     android:backgroundTint="#0DFFFFFF"
-    android:layout_marginHorizontal="50dp">
+    android:paddingHorizontal="20dp"
+    android:paddingVertical="15dp">
 
     <TextView
         android:id="@+id/input_dialog_title"
@@ -30,11 +31,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/list_view"
         android:layout_alignParentStart="true"
-        android:fontFamily="@font/inter_semibold"
         android:background="@color/secondary_theme"
-        android:textColor="@color/primary_theme"
-        android:text="CANCEL">
-    </androidx.appcompat.widget.AppCompatButton>
+        android:fontFamily="@font/inter_semibold"
+        android:text="CANCEL"
+        android:textColor="@color/primary_theme"></androidx.appcompat.widget.AppCompatButton>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/submit_btn"
@@ -42,10 +42,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/list_view"
         android:layout_alignParentEnd="true"
-        android:fontFamily="@font/inter_semibold"
         android:background="@color/secondary_theme"
-        android:textColor="@color/primary_theme"
-        android:text="SUBMIT">
-    </androidx.appcompat.widget.AppCompatButton>
+        android:fontFamily="@font/inter_semibold"
+        android:text="SUBMIT"
+        android:textColor="@color/primary_theme"></androidx.appcompat.widget.AppCompatButton>
 
 </RelativeLayout>
