--- a/app/src/main/res/layout/dialog_create_list.xml
+++ b/app/src/main/res/layout/dialog_create_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/createListPopUp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="50dp"
@@ -30,8 +31,7 @@
             android:id="@+id/dropdown_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="none">
-        </AutoCompleteTextView>
+            android:inputType="none"></AutoCompleteTextView>
     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -41,11 +41,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/textInputLayout"
         android:layout_alignParentStart="true"
-        android:fontFamily="@font/inter_semibold"
         android:background="@color/secondary_theme"
-        android:textColor="@color/primary_theme"
-        android:text="CANCEL">
-    </androidx.appcompat.widget.AppCompatButton>
+        android:fontFamily="@font/inter_semibold"
+        android:text="CANCEL"
+        android:textColor="@color/primary_theme"></androidx.appcompat.widget.AppCompatButton>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/submit_btn"
@@ -53,10 +52,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/textInputLayout"
         android:layout_alignParentEnd="true"
-        android:fontFamily="@font/inter_semibold"
         android:background="@color/secondary_theme"
-        android:textColor="@color/primary_theme"
-        android:text="SUBMIT">
-    </androidx.appcompat.widget.AppCompatButton>
+        android:fontFamily="@font/inter_semibold"
+        android:text="SUBMIT"
+        android:textColor="@color/primary_theme"></androidx.appcompat.widget.AppCompatButton>
 
 </RelativeLayout>
