--- a/app/src/main/res/layout/dialog_delete_prompt.xml
+++ b/app/src/main/res/layout/dialog_delete_prompt.xml
@@ -10,7 +10,7 @@
     android:layout_marginHorizontal="350dp">
 
     <TextView
-        android:id="@+id/dialog_title"
+        android:id="@+id/input_dialog_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/inter_semibold"
