Update icons for bottom navigation menu and add related fragment + xml files

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,8 +12,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:icon="@drawable/icon_home_line"
-        android:title="Home Inventory"
-        android:visible="false" />
+        android:title="Home Inventory" />
+    <item
+        android:id="@+id/userRequest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:icon="@drawable/icon_request_line"
+        android:title="User Requests" />
     <item
         android:id="@+id/search"
         android:layout_width="wrap_content"
