--- a/app/src/main/res/layout/dialog_multiple_choice.xml
+++ b/app/src/main/res/layout/dialog_multiple_choice.xml
@@ -23,7 +23,8 @@
         android:layout_width="match_parent"
         android:layout_height="400dp"
         android:layout_below="@id/input_dialog_title"
-        android:layout_marginVertical="10dp" />
+        android:layout_marginVertical="10dp"
+    />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/cancel_btn"
