--- a/app/src/main/res/layout/fragment_inventory.xml
+++ b/app/src/main/res/layout/fragment_inventory.xml
@@ -31,15 +31,26 @@
             tools:layout_editor_absoluteX="561dp"
             tools:layout_editor_absoluteY="24dp" />
 
+        <ImageButton
+            android:id="@+id/sortButton"
+            android:layout_width="48sp"
+            android:layout_height="48sp"
+            android:background="?attr/selectableItemBackground"
+            android:contentDescription="@string/sort_button"
+            android:src="@drawable/icon_sort"
+            android:layout_gravity="end"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
     </androidx.appcompat.widget.Toolbar>
 
     <TableLayout
+        android:id="@+id/tableLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ShoppingListToolBar"
-        android:layout_margin="20dp">
+        app:layout_constraintTop_toBottomOf="@+id/ShoppingListToolBar">
 
         <TableRow>
 
@@ -74,24 +85,56 @@
                 android:textSize="25sp" />
 
         </TableRow>
-
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
     </TableLayout>
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/stockHomeInventoryView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
+
+    <LinearLayout
+        android:id="@+id/hiddenProductLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/stockHomeInventoryView">
+
+        <!-- ImageView for the arrow icon -->
+        <ImageView
+            android:id="@+id/hiddenProductArrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:contentDescription="Arrow Hidden Product"
+            android:src="@drawable/icon_arrow_up" />
+
+        <!-- TextView for the title -->
+        <TextView
+            android:id="@+id/hiddenProductTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:fontFamily="@font/inter_semibold"
+            android:text="Hidden Products"
+            android:textSize="25sp" />
+    </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/hiddenHomeInventoryView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/hiddenProductLayout"
+        android:visibility="gone"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
