--- a/app/src/main/res/layout/dialog_home_product_expiry_dates.xml
+++ b/app/src/main/res/layout/dialog_home_product_expiry_dates.xml
@@ -46,11 +46,20 @@
         </LinearLayout>
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/home_product_life_time_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/inter_semibold"
+        android:layout_below="@id/home_product_expiry_dates"
+        android:text="Home Product Life Time"
+        android:textSize="18sp" />
+
     <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
         android:layout_height="400dp"
-        android:layout_below="@id/home_product_expiry_dates"
+        android:layout_below="@id/home_product_life_time_info"
         android:layout_marginVertical="10dp" />
 
     <androidx.appcompat.widget.AppCompatButton
