--- a/app/src/main/res/layout/fragment_user_request.xml
+++ b/app/src/main/res/layout/fragment_user_request.xml
@@ -2,14 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/ShoppingListFragment"
+    android:id="@+id/RequestListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary_theme"
-    tools:context=".presentation.ShoppingListFragment">
+    tools:context=".presentation.UserRequestFragment">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/ShoppingListToolBar"
+        android:id="@+id/requestListToolBar"
         android:layout_width="0dp"
         android:layout_height="80dp"
         android:background="@color/primary_theme"
@@ -19,6 +19,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+        
+        <ImageButton
+            android:id="@+id/addButton"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_gravity="end"
+            android:layout_marginEnd="50dp"
+            android:background="@color/primary_theme"
+            android:backgroundTint="#00FFFFFF"
+            android:src="@drawable/icon_add"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -32,6 +43,16 @@
             tools:layout_editor_absoluteY="24dp" />
 
     </androidx.appcompat.widget.Toolbar>
+
+    <ExpandableListView
+        android:id="@+id/requestListView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/requestListToolBar">
+    </ExpandableListView>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
