--- a/app/src/main/res/layout/dialog_create_user.xml
+++ b/app/src/main/res/layout/dialog_create_user.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/addUserPopUp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingHorizontal="20dp"
-    android:paddingVertical="15dp"
+    android:layout_marginHorizontal="350dp"
     android:background="@color/primary_theme"
     android:backgroundTint="#0DFFFFFF"
-    android:layout_marginHorizontal="350dp">
+    android:paddingHorizontal="20dp"
+    android:paddingVertical="15dp">
 
     <TextView
         android:id="@+id/create_user_dialog"
@@ -30,25 +31,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/user_name_input"
-        android:layout_marginTop="20sp"
         android:layout_alignParentStart="true"
-        android:fontFamily="@font/inter_semibold"
+        android:layout_marginTop="20sp"
         android:background="@color/secondary_theme"
-        android:textColor="@color/primary_theme"
-        android:text="Cancel">
-    </androidx.appcompat.widget.AppCompatButton>
+        android:fontFamily="@font/inter_semibold"
+        android:text="Cancel"
+        android:textColor="@color/primary_theme"></androidx.appcompat.widget.AppCompatButton>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/confirm_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/user_name_input"
-        android:layout_marginTop="20sp"
         android:layout_alignParentEnd="true"
-        android:fontFamily="@font/inter_semibold"
+        android:layout_marginTop="20sp"
         android:background="@color/secondary_theme"
-        android:textColor="@color/primary_theme"
-        android:text="Confirm">
-    </androidx.appcompat.widget.AppCompatButton>
+        android:fontFamily="@font/inter_semibold"
+        android:text="Confirm"
+        android:textColor="@color/primary_theme"></androidx.appcompat.widget.AppCompatButton>
 
 </RelativeLayout>
